# tazzariDash

./: .gitignore  CMakeLists.txt  INSTALLATION_SUMMARY.md  autostart_config.sh  bt_setup.sh  build.sh  build_dev.sh.sh  deploy.sh  fix_bluetooth_pairing.sh  install_dashboard_deps.sh  readme.md  readmelim.md  setup.sh  setup_autostart.sh  setup_beocreate_bluetooth.sh  setup_bluetooth_audio.sh
include/: BluetoothAudioManager.h  MultiAudioManager.h  PersistentStorage.h  SerialCommunication.h  SimplifiedAudioManager.h  lv_conf.h  lvgl_compat.h
src/: BluetoothAudioManager.cpp  MultiAudioManager.cpp  PersistentStorage.cpp  SerialCommunication.cpp  SimplifiedAudioManager.cpp  main.cpp
ui/: Tazzari.eez-project  Tazzari.eez-project-ui-state  images.c  images.h  screens.c  screens.h  ui.c  ui_image_abblendlicht.c  ui_image_bat.c  ui_image_drl.c  ui_image_ext.c  ui_image_icon_abblendlicht.c  ui_image_icon_abblendlicht_cor.c  ui_image_icon_blinker.c  ui_image_icon_creak.c  ui_image_icon_drl.c  ui_image_icon_handbremse.c  ui_image_icon_nebellicht_hinten.c  ui_image_icon_nebellicht_vorne.c  ui_image_icon_vollicht.c  ui_image_nebellicht.c  ui_image_play.c  ui_image_rueckfahrlicht.c  ui_image_ruecklicht.c  ui_image_skip.c  ui_image_stop.c  ui_image_tazzari.c  ui_image_vollicht.c
